# simple-test-mcp-rust

./: Cargo.toml  README.md
src/: main.rs  server.rs  types.rs
